fix: letter-spacing

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -3,7 +3,6 @@
 
 @mixin typography {
   font-feature-settings: "palt";
-  letter-spacing: 0.025em;
   overflow-wrap: break-word;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
