--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -24,3 +24,4 @@ $layout-padding-sp: 1rem;
 // font
 $line-height: 1.8;
 $icon-top: calc((#{$line-height}em - 1em) / 4);
+$letter-spacing: 0.05em;
